# SummaryPocket

./: .gitignore  Dockerfile  README.md  Taskfile.yml  pyproject.toml
data/: prompt.txt
summary_pocket/: app.py  chatgpt.py  logger_util.py  main.py  notification.py  notion.py  pocket.py  website.py
summary_pocket/services/: chatgpt.py  notion.py  pocket.py  website.py
summary_pocket/utils/: error_url_util.py  logger_util.py  notification_util.py  requests_util.py
tests/: test_chatgpt.py  test_notification.py  test_notion.py  test_pocket.py  test_website.py
